Update de la trame du fichier principal

--- a/Hackathon - Fichier principal.ipynb
+++ b/Hackathon - Fichier principal.ipynb
@@ -25,6 +25,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib as plt"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -55,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pourtant, contrairement à une idée reçue, le charbon n’est pas seulement une énergie des pays « pauvres » ou « émergents », mais aussi… une énergie des pays dits riches, car ces derniers possèdent aussi des centrales électriques à charbon. Avant de rentrer dans les détails, un panorama sur les émissions des USA, désormais « seulement » deuxième émetteur de gaz à effet de serre au monde, le montrera mieux que de longs discours."
+    "Malgré cela, le charbon reste encore majoritairement utilisé pour produire de l'énergie :"
    ]
   },
   {
@@ -64,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Graphe des rejets de CO2 par pays et par habitants au niveau mondial"
+    "# Graphe sur l'utilisation charbon poru la production d'électricité"
    ]
   },
   {
@@ -78,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Les USA ne sont pas le seul pays industrialisé à consommer du charbon significativement : parmi les 25 premiers consommateurs de charbon par personne se trouvent beaucpoup de pays de l’OCDE :"
+    "Contrairement à une idée reçue, le charbon n’est pas seulement une énergie des pays « pauvres » ou « émergents », mais aussi… une énergie des pays dits riches, car ces derniers possèdent aussi des centrales électriques à charbon. Les USA ne sont pas le seul pays industrialisé à consommer du charbon significativement : parmi les 25 premiers consommateurs de charbon par personne se trouvent beaucoup de pays de l’OCDE :"
    ]
   },
   {
@@ -91,33 +102,68 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "Certains pays l'utilisent de plus en plus et d'autres de moins en moins.\n",
-    "\n",
-    "\n",
-    "Montrer que la part d’électricité produite par le charbon reste stable (des pays l’utilisent de moins en moins et d’autres de plus en plus).\n",
-    "https://ourworldindata.org/grapher/coal-consumption-by-country-terawatt-hours-twh?country=Africa+ARG+AUS+FRA+IND+OWID_WRL\n",
-    "https://ourworldindata.org/grapher/world-electricity-by-source (utilisation pour de la production électricité) "
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Pourquoi le charbon est-il autant utilisé ?\n",
-    "Montrer les raisons de l’utilisation du charbon :\n",
-    "Réserves de charbon\n",
-    "Prix\n",
-    "Demande d’énergie croissante\n",
+    "Le côut d'extraction du charbon est relativement faible, les réserves sont facilement disponibles, notamment dans les pays qui l'utilisent beaucoup et ces pays doivent pouvoir faire face à la demande croissante en énergie.\n",
+    "\n",
     "\n",
     "https://ourworldindata.org/grapher/coal-production-by-country?country=AUS-0+CHN-0+FRA-0+IND-0+GBR-1 (utilisation car ressource facilement disponible dans les pays qui l'utilisent)\n",
     "\n",
-    "https://ourworldindata.org/grapher/world-population-by-world-regions-post-1820 (évolution de la population mondiale) + https://ourworldindata.org/grapher/population\n",
+    "https://ourworldindata.org/grapher/world-population-by-world-regions-post-1820 (évolution de la population mondiale) + https://ourworldindata.org/grapher/population"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Graphe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Graphe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Une diminution de l'utilisation du charbon est-elle à entrevoir ?\n",
     "\n",
-    "\n",
-    "Possible diminution ?\n",
     "Montrer ce qui peut faire diminuer l’utilisation du charbon :\n",
     "Par quoi les pays qui ne l’utilisent plus l’ont remplacé (gaz, etc.)\n",
     "Investissement dans les énergies durables\n",
@@ -125,6 +171,39 @@
     "https://ourworldindata.org/grapher/renewable-energy-investment-of-gdp\n",
     "https://ourworldindata.org/grapher/investment-in-renewable-energy-by-technology"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion / Ouverture\n",
+    "\n",
+    "(https://jancovici.com/transition-energetique/charbon/a-quoi-sert-le-charbon/)\n",
+    "Il est logique que le charbon ait pris une telle place dans un contexte socio-économique où les avantages immédiats écrasent les inconvénients à long terme. Avec un système de formation des prix qui ne tient que très peu compte de la rareté à long terme et des dommages environnementaux de long terme, mais beaucoup du coût immédiat du travail, le charbon est un ticket gagnant :\n",
+    "* il est abondant, et surtout disponible sur place dans les pays qui dominent l’économie mondiale (à l’exception du Japon),\n",
+    "* il n’est pas cher à extraire : 40 à 50 dollars la tonne, soit 0,5 à 1 centime d’euro le kWh (comme pour le pétrole),\n",
+    "* il est nécessaire – ou le moins cher – pour la production de tous les matériaux de base qui ont fait l’essor de la société industrielle,\n",
+    "* il permet de produire de l’électricité pour pas cher, or l’électricité est la forme la plus noble (et donc la plus polyvalente), sur le plan thermodynamique, des énergies finales que nous utilisons.\n",
+    "\n",
+    "\n",
+    "Avec plus de 500 milliards de tonnes de réserves prouvées, le charbon serait la dernière des énergies carbonées disponibles si la croissance de la consommation continuait comme aujourd’hui. Alors que le pic de production du pétrole est proche, et qu’il en sera de même pour le gaz bien avant le milieu du siècle, accélérer le recours au charbon deviendra probablement de plus en plus tentant tant que le monde cherchera la « croissance économique » à court terme, même si cela doit s’accompagner d’une forte prise de risque concernant des dégâts climatiques ultérieurs (et d’une décroissance économique accélérée à ce moment là !). Car l’usage de cette énergie est synonyme de fortes émissions de gaz à effet de serre…\n",
+    "\n",
+    "Toutefois, on constate que la transition avec de nouvelles énergies est en marche puisque des pays ont investis massivement dans les énergies renouvelables. Reste maintenant à savoir si ces investissements permettront de répondre aux besoins croissants en énergie, ce qui est moins sûr."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
