Update fichier principal

--- a/Hackathon - Fichier principal.ipynb
+++ b/Hackathon - Fichier principal.ipynb
@@ -75,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Graphe sur l'utilisation charbon poru la production d'électricité"
+    "# Graphe sur l'utilisation charbon pour la production d'électricité"
    ]
   },
   {
